[package]
name = "memterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.35"
generator = "0.7.5"
lazy_static = "1.4.0"
unicode-normalization = "0.1.24"
unicode-width = "0.1.11"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.134"
